Mindre ändring av text

--- a/integrationen_i_dalarna.html
+++ b/integrationen_i_dalarna.html
@@ -2178,12 +2178,12 @@ världsdelar där flyktinginvandringen varit stor under de senaste
 att individer med förgymnasial utbildning i lägre utsträckning är
 förvärvsarbetande (se diagram 17), vilket gäller även gruppen med
 utrikes födda.</p>
-<p>Sysselsättningsgraden för såväl inrikes som utrikes födda har ökat
-mellan 2017 och 2024, men ökningen har varit klart störst för utrikes
-födda, från 55,1 procent till 68,2 procent. För inrikes födda har
-sysselsättningsgraden ökat från 84,6 procent till 85,4 procent under
-samma tidsperiod. Utrikes födda kommer således i arbete i mycket större
-utsträckning 2024, än de gjorde 2017.</p>
+<p>Diagrammet nedan visar att sysselsättningsgraden för såväl inrikes
+som utrikes födda har ökat mellan 2017 och 2024, men ökningen har varit
+klart störst för utrikes födda, från 55,1 procent till 68,2 procent. För
+inrikes födda har sysselsättningsgraden ökat från 84,6 procent till 85,4
+procent under samma tidsperiod. Utrikes födda kommer således i arbete i
+mycket större utsträckning 2024, än de gjorde 2017.</p>
 <p>En analys av andelen sysselsatta uppdelat på utrikes/inrikes födda
 utifrån om föräldrarna är födda inrikes eller utrikes visar att andelen
 sysselsatta är högre för inrikes födda med två föräldrar födda utrikes
