--- a/integrationen_i_dalarna.html
+++ b/integrationen_i_dalarna.html
@@ -1531,7 +1531,7 @@ border-radius: 0px;
 
 <p style="font-size:12px">
 <i>Rapporten är skapad av Samhällsanalys, Region Dalarna<br> Senast
-uppdaterad: 2025-04-09</i>
+uppdaterad: 2025-04-11</i>
 </p>
 <div id="sammanfattning" class="section level1 unnumbered">
 <h1 class="unnumbered">Sammanfattning</h1>
@@ -1991,14 +1991,41 @@ inrikes och utrikes födda och kvinnor och män.</span></p>
 </div>
 <div id="vägen-till-arbete" class="section level1" number="3">
 <h1><span class="header-section-number">3</span> Vägen till arbete</h1>
-<p><span class="kommentar">Försöka besvara frågorna: <br> <em>Vilka
-kommer i arbete?</em> <br> <em>När kommer de i arbete?</em> <br>
-<em>Vilka är de yrken som de arbetar i?</em> <br> <em>Hur är matchningen
-mot utbildning?</em> <br> <em>Kvinnor och män, jämfört med inrikes
-födda</em> <br> <em>Vilka arbetar inte?</em> <br> <em>Hur ser
-etableringen ut baserat på vistelsetid?</em> - Kolla i rapporten om
-kvinnor och män <br> <em>Långtidsarbetslöshet för inrikes och utrikes
-födda</em></span></p>
+<p>Att arbeta (eller studera) är en viktig komponent i integrationen i
+samhället. Sysselsättningen bland utrikes födda är generellt lägre än
+bland svenskfödda personer och arbetslösheten, inklusive
+långtidsarbetslösheten, är högre. Utrikes födda har generellt en svagare
+ställning på arbetsmarknaden. Arbetslöshets- och sysselsättningsnivåerna
+bland utrikes födda varierar dock stort mellan olika grupper. Kön,
+födelseland och utbildningsnivå är alla faktorer som har stor betydelse.
+I detta avsnitt ska förhoppningsvis nedanstående frågor kring utrikes
+födda besvaras:</p>
+<ul>
+<li>
+<em>Vilka kommer i arbete?</em>
+</li>
+<li>
+<em>När kommer de i arbete?</em>
+</li>
+<li>
+<em>Vilka yrken arbetar de i?</em>
+</li>
+<li>
+<em>Hur ser etableringen ut baserat på vistelsetid?</em>
+</li>
+<li>
+<em>Hur är matchningen mellan arbete och utbildning?</em>
+</li>
+<li>
+<em>Vilka arbetar inte? Vilken utbildning har de?</em>
+</li>
+<li>
+<em>Hur ser långtidsarbetslösheten ut? för inrikes och utrikes
+födda</em>
+</li>
+</ul>
+<p><span class="kommentar"> Titta på utrikes födda kvinnor och män,
+jämför med inrikes födda</span></p>
 <p>I Statistiska centralbyråns analys av utrikes föddas etablering på
 arbetsmarknaden identifierar de några aspekter som särskilt viktiga för
 sysselsättningen bland utrikes födda. Forskning visar att
